[package]
name = "solomon"
version = "0.1.0"
authors = ["Karl Whitford <cevb@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
failure = "0.1.1"
lazy_static = "0.2"
time = "0.1"
log = "0.4"
uuid = { version = "0.5", features = ["v4", "serde"] }

