[package]
name = "solomon_cli"
version = "0.1.0"
authors = ["Karl Whitford <cevb@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "2.2.2"
dirs = "1.0.3"
env_logger = "0.5"
failure = "0.1.1"
failure_derive = "0.1.1"
getopts = "0.2"
lazy_static = "0.2"
linefeed = "0.5"
log = "0.4"
tabwriter = "1"
tempfile = "1.1"
termion = "1"
time = "0.1"
